# crowd-test

./: .env  .env.example  .gitignore  Makefile  README.md  p1.txt  requirements.txt  start.sh
api/: alembic.ini  backend_main.py  backend_models.py  backend_statistics.py  backend_tasks.py  backend_utils.py  celery_tasks.py  celery_worker.py  database.py  models.py  pyproject.toml  schemas.py  statistics.py  survey_routes.py  tasks.py  utils.py
api/migrations/: env.py
api/migrations/versions/: 001_init.py
docs/: docker_compose.txt
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/surveys/: page.tsx
frontend/app/surveys/[id]/: page.tsx
frontend/app/surveys/create/: page.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
infra/: docker-compose.yml
web/pages/: index.tsx
